--- a/mbank/src/main/res/layout/transaction_layout.xml
+++ b/mbank/src/main/res/layout/transaction_layout.xml
@@ -46,6 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
+                android:textColor="#ffffff"
                 android:textStyle="bold"
                 android:text="New Transaction">
             </TextView>
