--- a/mbank/src/main/res/drawable/circle_shape_green.xml
+++ b/mbank/src/main/res/drawable/circle_shape_green.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval" >
     <gradient
-        android:startColor="#546e64"
-        android:endColor="#546e64"
+        android:startColor="#f79239"
+        android:endColor="#f79239"
         android:angle="270"/>
 </shape>
