--- a/mbank/src/main/res/layout/settings_layout.xml
+++ b/mbank/src/main/res/layout/settings_layout.xml
@@ -48,6 +48,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="18dp"
                     android:textStyle="bold"
+                    android:textColor="#ffffff"
                     android:text="Settings">
             </TextView>
 
