--- a/mbank/src/main/res/layout/summary_details_list_layout.xml
+++ b/mbank/src/main/res/layout/summary_details_list_layout.xml
@@ -48,6 +48,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="18dp"
+                    android:textColor="#ffffff"
                     android:textStyle="bold"
                     android:text="Summary">
             </TextView>
@@ -56,6 +57,7 @@
 
         <RelativeLayout
                 android:layout_width="53dp"
+                android:visibility="gone"
                 android:layout_height="fill_parent"
                 android:background="@drawable/button_selector"
                 android:layout_alignParentRight="true"
@@ -138,8 +140,11 @@
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:layout_centerInParent="true"
+                        android:textColor="#ffffff"
+                        android:textStyle="normal"
+                        android:textSize="15sp"
                         android:id="@+id/capture_layout_clear_icon"
-                        android:text="Print">
+                        android:text="Print receipt">
                 </TextView>
             </RelativeLayout>
 
